--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-     "start": "tsx watch src/main.ts",
+    "build": "tsc",
+    "dev": "tsx watch src/main.ts",
+    "start": "node dist/src/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -18,5 +20,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "firebase": "^10.7.2"
+  
   }
 }
+
